--- a/YenniferBotCore/YenniferBotCore.csproj
+++ b/YenniferBotCore/YenniferBotCore.csproj
@@ -1,8 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <ApplicationIcon />
+    <OutputTypeEx>exe</OutputTypeEx>
+    <StartupObject />
+    <Product>YenniferBot</Product>
+    <Description />
   </PropertyGroup>
 
   <ItemGroup>
