rename project 'cause Bejong rename shit

--- a/YenniferBotCore/YenneferBotCore.csproj
+++ b/YenniferBotCore/YenneferBotCore.csproj
@@ -6,7 +6,7 @@
     <ApplicationIcon />
     <OutputTypeEx>exe</OutputTypeEx>
     <StartupObject />
-    <Product>YenniferBot</Product>
+    <Product>YenneferBot</Product>
     <Description />
   </PropertyGroup>
 
